Adding calculation of num of points of a variable per zone in python

--- a/python/main.ipynb
+++ b/python/main.ipynb
@@ -213,17 +213,45 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CODIGO PARA SACAR NUMERO DE PUNTOS DE UNA VARIABLE (EJ: HOSPITALES) EN CADA BARRIO\n",
+    "\n",
+    "La siguiente celda de código enseña como se puede obtener el número de puntos de una variable en formato .geojson para sacar, por ejemplo, el numero de hospitales que hay por cada barrio de una ciudad (en este caso Valencia)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nombre\n",
+      "AIORA            0.0\n",
+      "ALBORS           2.0\n",
+      "ARRANCAPINS      1.0\n",
+      "BENICALAP        3.0\n",
+      "BENIFARAIG       1.0\n",
+      "                ... \n",
+      "TORMOS           1.0\n",
+      "TORREFIEL        2.0\n",
+      "TRES FORQUES     0.0\n",
+      "TRINITAT         1.0\n",
+      "VARA DE QUART    0.0\n",
+      "Name: point_count, Length: 88, dtype: float64\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "' merged = merged.to_crs(\"+proj=cea +lat_ts=39.44628964870906 +lon_ts=-0.3326600366971329 +units=km\") #Se proyecta sobre el plano para el cálculo adecuado del área\\n\\n\\nbarrios_gpd = barrios_gpd.to_crs(\"+proj=cea +lat_ts=39.44628964870906 +lon_ts=-0.3326600366971329 +units=km\") #Se proyecta sobre el plano para el cálculo adecuado del área\\n\\n\\nmerged[\\'areaVariable\\'] = merged.geometry.area\\n\\nbarrios_gpd[\\'areaBarrio\\'] = barrios_gpd.geometry.area\\n\\n\\nmerged_areas = merged.groupby(\\'nombre\\')[\\'areaVariable\\'].sum() # Sumamos todas las áreas verdes por barrio\\n\\n\\nbarrios_gpd = barrios_gpd.merge(merged_areas, on=\\'nombre\\', how=\\'left\\') # Hacemos merge de la tabla Barrios con la tabla merged_areas\\n\\n\\n\\nbarrios_gpd = barrios_gpd.to_crs (\\'epsg:4326\\') #Se necesita convertir otra vez a epsg para poder tener las coordenadas GPS correctamente\\n\\n\\n\\nbarrios_gpd[\\'per_variable\\'] = barrios_gpd[\\'areaVariable\\']/barrios_gpd[\\'areaBarrio\\'] # Obtenemos el % de zona verde por barrio\\n\\n\\nbarrios_gpd_pervariable = barrios_gpd.groupby(\\'nombre\\')[\\'per_variable\\'].sum()\\n\\nbarrios_gpd_pervariable.to_csv(\\'barrios_perhospital.csv\\')\\n\\nwith open(\"barrios_perhospital.geojson\", \"w\") as outfile:\\n    outfile.write(barrios_gpd.to_json())\\n '"
+       "\" merged_points = merged.groupby('nombre_1')['id'].sum() # Sumamos todas las áreas verdes por barrio\\n\\nprint(merged_points) \""
       ]
      },
-     "execution_count": 92,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,11 +276,6 @@
     "    json_data = json.load(json_file)\n",
     "    \n",
     "    \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "# print(json_data.keys())\n",
     "\n",
     "\n",
@@ -344,8 +367,6 @@
     "    \n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     "## CALCULANDO INTERSECCIÓN BARRIOS CON ZONAS VERDES\n",
     "\n",
     "merged = gpd.overlay(barrios_gpd, hospitales_gpd,   how='intersection', keep_geom_type=False) # Calculamos la intersección de los polígonos de barrios con los de zonas verdes\n",
@@ -363,39 +384,24 @@
     "## CARGANDO DATOS COMO GPD PARA INTERSECCION ##\n",
     "###############################################\n",
     "\n",
+    "#*Modifcado el código de https://stackoverflow.com/questions/71359323/how-to-sum-the-number-of-entries-in-a-dataframe-that-are-located-within-a-geopan\n",
     "\n",
-    "\"\"\" merged = merged.to_crs(\"+proj=cea +lat_ts=39.44628964870906 +lon_ts=-0.3326600366971329 +units=km\") #Se proyecta sobre el plano para el cálculo adecuado del área\n",
+    "# do the spatial join, index right is the polygon idx values\n",
+    "sjoin_gdf = gpd.sjoin(hospitales_gpd, barrios_gpd)\n",
     "\n",
+    "# count the values with value counts\n",
+    "count_dict = sjoin_gdf['index_right'].value_counts().to_dict()\n",
     "\n",
-    "barrios_gpd = barrios_gpd.to_crs(\"+proj=cea +lat_ts=39.44628964870906 +lon_ts=-0.3326600366971329 +units=km\") #Se proyecta sobre el plano para el cálculo adecuado del área\n",
+    "# map the count_dict back to poly_gdf as new point count column \n",
+    "# alternatively you could do a join here, but new col name is nice\n",
+    "barrios_gpd['point_count'] = barrios_gpd.index.map(count_dict)\n",
     "\n",
+    "barrios_gpd_points = barrios_gpd.groupby('nombre')['point_count'].sum()\n",
     "\n",
-    "merged['areaVariable'] = merged.geometry.area\n",
-    "\n",
-    "barrios_gpd['areaBarrio'] = barrios_gpd.geometry.area\n",
-    "\n",
-    "\n",
-    "merged_areas = merged.groupby('nombre')['areaVariable'].sum() # Sumamos todas las áreas verdes por barrio\n",
-    "\n",
-    "\n",
-    "barrios_gpd = barrios_gpd.merge(merged_areas, on='nombre', how='left') # Hacemos merge de la tabla Barrios con la tabla merged_areas\n",
-    "\n",
-    "\n",
-    "\n",
-    "barrios_gpd = barrios_gpd.to_crs ('epsg:4326') #Se necesita convertir otra vez a epsg para poder tener las coordenadas GPS correctamente\n",
-    "\n",
-    "\n",
-    "\n",
-    "barrios_gpd['per_variable'] = barrios_gpd['areaVariable']/barrios_gpd['areaBarrio'] # Obtenemos el % de zona verde por barrio\n",
-    "\n",
-    "\n",
-    "barrios_gpd_pervariable = barrios_gpd.groupby('nombre')['per_variable'].sum()\n",
-    "\n",
-    "barrios_gpd_pervariable.to_csv('barrios_perhospital.csv')\n",
+    "print(barrios_gpd_points)\n",
     "\n",
     "with open(\"barrios_perhospital.geojson\", \"w\") as outfile:\n",
-    "    outfile.write(barrios_gpd.to_json())\n",
-    " \"\"\""
+    "    outfile.write(barrios_gpd.to_json())\n"
    ]
   },
   {
