Minor changes to intersection of polygons files

--- a/python/main.ipynb
+++ b/python/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "\" geoplot.polyplot(merged, projection=gcrs.AlbersEqualArea(), edgecolor='green', facecolor='green', linewidth=.3,\\n    figsize=(12, 8)) \""
       ]
      },
-     "execution_count": 88,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,15 +67,15 @@
     "    barrios_json.append(json_data['features'][i])\n",
     "\n",
     "\n",
-    "\"\"\" \n",
-    "BLUE = '#6699cc'\n",
+    " \n",
+    "\"\"\" BLUE = '#6699cc'\n",
     "fig = plt.figure() \n",
     "ax = fig.gca()\n",
     "for i in range(len(barrios)):\n",
     "    ax.add_patch(PolygonPatch(barrios[i], fc=BLUE, ec=BLUE, alpha=0.5, zorder=2 ))\n",
     "ax.axis('scaled')\n",
-    "plt.show()\n",
-    " \"\"\"\n",
+    "plt.show() \"\"\"\n",
+    " \n",
     "\n",
     "###########################################\n",
     "## CARGANDO DATOS INICIALES ZONAS VERDES ##\n",
@@ -110,7 +110,7 @@
     "\n",
     "\n",
     "\n",
-    "BLUE = '#6699cc'\n",
+    "\"\"\" BLUE = '#6699cc'\n",
     "GREEN = '#00FF00'\n",
     "fig = plt.figure() \n",
     "ax = fig.gca()\n",
@@ -122,7 +122,7 @@
     "# ax.axis('scaled')\n",
     "ax.set_ylim([39.4, 39.6])\n",
     "ax.set_xlim([-0.45,-0.25])\n",
-    "plt.show()\n",
+    "plt.show() \"\"\"\n",
     "\n",
     "\n",
     "\n",
@@ -134,15 +134,16 @@
     "barrios_gpd = gpd.GeoDataFrame.from_features(barrios_json)\n",
     "barrios_gpd.crs = 'epsg:4326' #Aseguramos que la proyección es la adecuada para coordenadas GPS\n",
     "\n",
+    "# print(barrios_gpd)\n",
     "\n",
+    "# barrios_gpd.to_csv('ejemplobarrio.csv')\n",
     "\n",
     "zonas_verdes_gpd = gpd.GeoDataFrame.from_features(zonas_verdes_json)\n",
     "zonas_verdes_gpd.crs = 'epsg:4326' #Aseguramos que la proyección es la adecuada para coordenadas GPS\n",
     "\n",
     "\n",
-    "\n",
     "\"\"\" geoplot.polyplot(zonas_verdes_gpd, projection=gcrs.AlbersEqualArea(), edgecolor='green', facecolor='green', linewidth=.3,\n",
-    "    figsize=(12, 8)) \"\"\"\n",
+    "    figsize=(12, 8))  \"\"\"\n",
     "    \n",
     "\n",
     "\n",
@@ -180,6 +181,7 @@
     "merged_areas = merged.groupby('nombre')['areaVariable'].sum() # Sumamos todas las áreas verdes por barrio\n",
     "\n",
     "\n",
+    "\n",
     "barrios_gpd = barrios_gpd.merge(merged_areas, on='nombre', how='left') # Hacemos merge de la tabla Barrios con la tabla merged_areas\n",
     "\n",
     "\n",
@@ -191,9 +193,10 @@
     "barrios_gpd['per_variable'] = barrios_gpd['areaVariable']/barrios_gpd['areaBarrio'] # Obtenemos el % de zona verde por barrio\n",
     "\n",
     "\n",
-    "barrios_gpd_pervariable = barrios_gpd.groupby('nombre')['per_variable'].sum()\n",
+    "# barrios_gpd_pervariable = barrios_gpd.groupby('nombre')['per_variable'].sum()\n",
     "\n",
-    "barrios_gpd_pervariable.to_csv('barrios_pervariable.csv')\n",
+    "# barrios_gpd_pervariable.to_csv('barrios_pervariable.csv')\n",
+    "\n",
     "with open(\"barrios_perzonaverde.geojson\", \"w\") as outfile:\n",
     "    outfile.write(barrios_gpd.to_json())\n",
     "\n",
