Adding update to interesection with single point geojson (ex: hospitals)

--- a/python/main.ipynb
+++ b/python/main.ipynb
@@ -226,44 +226,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "nombre\n",
-      "AIORA            0.0\n",
-      "ALBORS           2.0\n",
-      "ARRANCAPINS      1.0\n",
-      "BENICALAP        3.0\n",
-      "BENIFARAIG       1.0\n",
-      "                ... \n",
-      "TORMOS           1.0\n",
-      "TORREFIEL        2.0\n",
-      "TRES FORQUES     0.0\n",
-      "TRINITAT         1.0\n",
-      "VARA DE QUART    0.0\n",
-      "Name: point_count, Length: 88, dtype: float64\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\" merged_points = merged.groupby('nombre_1')['id'].sum() # Sumamos todas las áreas verdes por barrio\\n\\nprint(merged_points) \""
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import geopandas as gpd\n",
     "import matplotlib.pyplot as plt \n",
-    "\n",
+    "import numpy as np\n",
     "\n",
     "import geoplot\n",
     "import geoplot.crs as gcrs\n",
@@ -275,7 +245,7 @@
     "## CARGANDO DATOS INICIALES BARRIOS ##\n",
     "######################################\n",
     "\n",
-    "with open('/home/ttmam/GitHub/DATAPROJECT1/datos_ini/barris-barrios.geojson') as json_file:\n",
+    "with open('/home/ttmam/GitHub/DATAPROJECT1/datos/datos_ini/barris-barrios.geojson') as json_file:\n",
     "    json_data = json.load(json_file)\n",
     "    \n",
     "    \n",
@@ -305,7 +275,7 @@
     "## CARGANDO DATOS INICIALES ZONAS VERDES ##\n",
     "###########################################\n",
     "\n",
-    "with open('/home/ttmam/GitHub/DATAPROJECT1/datos_ini/hospitales.geojson') as json_file2:\n",
+    "with open('/home/ttmam/GitHub/DATAPROJECT1/datos/datos_ini/hospitales.geojson') as json_file2:\n",
     "    json_data2 = json.load(json_file2)\n",
     "\n",
     "# print(json_data.keys())\n",
@@ -357,7 +327,7 @@
     "\n",
     "barrios_gpd = gpd.GeoDataFrame.from_features(barrios_json)\n",
     "barrios_gpd.crs = 'epsg:4326' #Aseguramos que la proyección es la adecuada para coordenadas GPS\n",
-    "barrios_gpd.rename(columns ={'nombre':'barrio'})\n",
+    "barrios_gpd = barrios_gpd.rename(columns ={'nombre':'nombre_barrio_new','codbarrio':'codigo_barrio_new'})\n",
     "\n",
     "\n",
     "hospitales_gpd = gpd.GeoDataFrame.from_features(hospitales_json)\n",
@@ -382,6 +352,23 @@
     "with open(\"interseccion_hospitales.geojson\", \"w\") as outfile:\n",
     "    outfile.write(merged.to_json())\n",
     "\n",
+    "# merged['point_count'] = np.nan\n",
+    "\n",
+    "\n",
+    "\n",
+    "merged_count = merged.groupby('nombre_barrio_new')['codigo_barrio_new'].count().reset_index(name=\"point_count\") # Sumamos todas las áreas de intersección por barrio\n",
+    "\n",
+    "# print(merged_count)\n",
+    "\n",
+    "\n",
+    "barrios_gpd = barrios_gpd.merge(merged_count, on='nombre_barrio_new', how='left') # Hacemos merge de la tabla Barrios con la tabla merged_areas\n",
+    "\n",
+    "\n",
+    "with open(\"barrios_perhospitalnew.geojson\", \"w\") as outfile:\n",
+    "     outfile.write(barrios_gpd.to_json())\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "###############################################\n",
     "## CARGANDO DATOS COMO GPD PARA INTERSECCION ##\n",
@@ -389,22 +376,21 @@
     "\n",
     "#*Modifcado el código de https://stackoverflow.com/questions/71359323/how-to-sum-the-number-of-entries-in-a-dataframe-that-are-located-within-a-geopan\n",
     "\n",
-    "# do the spatial join, index right is the polygon idx values\n",
-    "sjoin_gdf = gpd.sjoin(hospitales_gpd, barrios_gpd)\n",
+    "# # do the spatial join, index right is the polygon idx values\n",
+    "# sjoin_gdf = gpd.sjoin(hospitales_gpd, barrios_gpd)\n",
     "\n",
-    "# count the values with value counts\n",
-    "count_dict = sjoin_gdf['index_right'].value_counts().to_dict()\n",
+    "# # count the values with value counts\n",
+    "# count_dict = sjoin_gdf['index_right'].value_counts().to_dict()\n",
     "\n",
-    "# map the count_dict back to poly_gdf as new point count column \n",
-    "# alternatively you could do a join here, but new col name is nice\n",
-    "barrios_gpd['point_count'] = barrios_gpd.index.map(count_dict)\n",
+    "# # map the count_dict back to poly_gdf as new point count column \n",
+    "# # alternatively you could do a join here, but new col name is nice\n",
+    "# barrios_gpd['point_count'] = barrios_gpd.index.map(count_dict)\n",
     "\n",
-    "barrios_gpd_points = barrios_gpd.groupby('nombre')['point_count'].sum()\n",
+    "# barrios_gpd_points = barrios_gpd.groupby('nombre')['point_count'].sum()\n",
     "\n",
-    "print(barrios_gpd_points)\n",
+    "# print(barrios_gpd_points)\n",
     "\n",
-    "with open(\"barrios_perhospital.geojson\", \"w\") as outfile:\n",
-    "    outfile.write(barrios_gpd.to_json())\n"
+    "\n"
    ]
   },
   {
