Adding count of schools to barrios_update.geojson

--- a/python/main.ipynb
+++ b/python/main.ipynb
@@ -275,7 +275,7 @@
     "## CARGANDO DATOS INICIALES ZONAS VERDES ##\n",
     "###########################################\n",
     "\n",
-    "with open('/home/ttmam/GitHub/DATAPROJECT1/datos/datos_ini/hospitales.geojson') as json_file2:\n",
+    "with open('/home/ttmam/GitHub/DATAPROJECT1/datos/datos_ini/centros-educativos-en-valencia.geojson') as json_file2:\n",
     "    json_data2 = json.load(json_file2)\n",
     "\n",
     "# print(json_data.keys())\n",
@@ -349,7 +349,7 @@
     "\n",
     "## GUARDANDO RESULTADO EN ARCHIVO .geojson\n",
     "\n",
-    "with open(\"interseccion_hospitales.geojson\", \"w\") as outfile:\n",
+    "with open(\"interseccion_colegios.geojson\", \"w\") as outfile:\n",
     "    outfile.write(merged.to_json())\n",
     "\n",
     "# merged['point_count'] = np.nan\n",
