--- a/python/tmp_api/ponderaciones.ipynb
+++ b/python/tmp_api/ponderaciones.ipynb
@@ -2,22 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Column Transporte Público sum: 1367\n",
+      "Column Transporte Público media: 35.973684210526315\n",
       "Column Colegios sum: 1080\n",
       "Column Zonas verdes sum: 1363\n",
       "Column Centros Sanitarios sum: 1363\n",
       "Column Contaminación sum: 1284\n",
       "Column Ruido sum: 1279.0\n",
       "Column Limpieza sum: 1420\n",
-      "Column Eléctrico sum: 1124.0\n",
-      "38\n"
+      "Column Eléctrico sum: 1124.0\n"
      ]
     }
    ],
@@ -57,8 +56,9 @@
     "df = df.rename(columns={'¿Qué edad tienes?': 'Edad', '¿Tienes hijos?': 'Hijos', '¿Trabajas actualmente?': 'Trabajo', '¿Valoras en gran medida la existencia de comercios cerca de tu zona?': 'Comercios', '¿Valoras en gran medida la existencia de estaciones de transporte público cerca de tu zona?': 'Transporte Publico', '¿Valoras en gran medida la existencia de lugares de ocio cerca de tu zona?': 'Ocio','¿Valoras en gran medida la existencia de colegios cerca de tu zona?': 'Colegios', '¿Valoras en gran medida la existencia de zonas verdes cerca de tu zona?': 'Zonas verdes', '¿Valoras en gran medida la existencia de centros sanitarios cerca de tu zona?': 'Centros Sanitarios', '¿Valoras negativamente la contaminación en tu zona?': 'Contaminacion', '¿El exceso de ruido supone un problema para ti?': 'Ruido', '¿Cuánto valoras la limpieza del barrio?': 'Limpieza','Ante la posibilidad de adquirir un coche electrico, ¿valoras la existencia de puntos de recarga?': 'Electrico', 'De las comodidades anteriores ¿cuáles serían las 3 que más valoras?': 'Comodidades', '¿Cuánto estarías dispuesto a pagar por el alquiler de una casa que ofrezca todas las comodidades que buscas?': 'Alquiler'})\n",
     "#data_test = df.drop(['Marca temporal', 'Puntuación'], axis=1)\n",
     "data_test = df.loc[df.loc[:, 'Edad'] == 'Entre 20 y 24 años']\n",
-    "Total = df['Transporte Publico'].sum()\n",
-    "print (\"Column Transporte Público sum:\",Total)\n",
+    "divisor = data_test[data_test.columns[0]].count()\n",
+    "media = (df['Transporte Publico'].sum())/divisor\n",
+    "print (\"Column Transporte Público media:\",media)\n",
     "Total = df['Colegios'].sum()\n",
     "print (\"Column Colegios sum:\",Total)\n",
     "Total = df['Zonas verdes'].sum()\n",
@@ -72,9 +72,7 @@
     "Total = df['Limpieza'].sum()\n",
     "print (\"Column Limpieza sum:\",Total)\n",
     "Total = df['Electrico'].sum()\n",
-    "print (\"Column Eléctrico sum:\",Total)\n",
-    "media = data_test[data_test.columns[0]].count()\n",
-    "print(media)"
+    "print (\"Column Eléctrico sum:\",Total)\n"
    ]
   }
  ],
