--- a/python/tmp_api/ponderaciones.ipynb
+++ b/python/tmp_api/ponderaciones.ipynb
@@ -2,21 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Column Transporte Público media: 35.973684210526315\n",
-      "Column Colegios sum: 1080\n",
-      "Column Zonas verdes sum: 1363\n",
-      "Column Centros Sanitarios sum: 1363\n",
-      "Column Contaminación sum: 1284\n",
-      "Column Ruido sum: 1279.0\n",
-      "Column Limpieza sum: 1420\n",
-      "Column Eléctrico sum: 1124.0\n"
+      "Your browser has been opened to visit:\n",
+      "\n",
+      "    https://accounts.google.com/o/oauth2/auth?client_id=836424022246-j9i462o5c822b9olk8g18h22o2o4ncsh.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A8080%2F&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive&access_type=offline&response_type=code\n",
+      "\n",
+      "Authentication successful.\n",
+      "8.605263157894736 4.921052631578948 7.105263157894737 8.0 7.526315789473684 7.052631578947368 8.263157894736842 6.7894736842105265\n"
      ]
     }
    ],
@@ -28,7 +26,8 @@
     "  \n",
     "'''# Initializing a GoogleAuth Object\n",
     "gauth = GoogleAuth()\n",
-    "\n",
+    "store = file.Storage('token.json')\n",
+    "creds = store.get()\n",
     "# client_secrets.json file is verified\n",
     "# and it automatically handles authentication\n",
     "gauth.LocalWebserverAuth()\n",
@@ -53,26 +52,19 @@
     "    df = workbook.parse(sheet_name)\n",
     "    d[sheet_name] = df\n",
     "\n",
-    "df = df.rename(columns={'¿Qué edad tienes?': 'Edad', '¿Tienes hijos?': 'Hijos', '¿Trabajas actualmente?': 'Trabajo', '¿Valoras en gran medida la existencia de comercios cerca de tu zona?': 'Comercios', '¿Valoras en gran medida la existencia de estaciones de transporte público cerca de tu zona?': 'Transporte Publico', '¿Valoras en gran medida la existencia de lugares de ocio cerca de tu zona?': 'Ocio','¿Valoras en gran medida la existencia de colegios cerca de tu zona?': 'Colegios', '¿Valoras en gran medida la existencia de zonas verdes cerca de tu zona?': 'Zonas verdes', '¿Valoras en gran medida la existencia de centros sanitarios cerca de tu zona?': 'Centros Sanitarios', '¿Valoras negativamente la contaminación en tu zona?': 'Contaminacion', '¿El exceso de ruido supone un problema para ti?': 'Ruido', '¿Cuánto valoras la limpieza del barrio?': 'Limpieza','Ante la posibilidad de adquirir un coche electrico, ¿valoras la existencia de puntos de recarga?': 'Electrico', 'De las comodidades anteriores ¿cuáles serían las 3 que más valoras?': 'Comodidades', '¿Cuánto estarías dispuesto a pagar por el alquiler de una casa que ofrezca todas las comodidades que buscas?': 'Alquiler'})\n",
+    "df2 = df.rename(columns={'¿Qué edad tienes?': 'Edad', '¿Tienes hijos?': 'Hijos', '¿Trabajas actualmente?': 'Trabajo', '¿Valoras en gran medida la existencia de comercios cerca de tu zona?': 'Comercios', '¿Valoras en gran medida la existencia de estaciones de transporte público cerca de tu zona?': 'Transporte Publico', '¿Valoras en gran medida la existencia de lugares de ocio cerca de tu zona?': 'Ocio','¿Valoras en gran medida la existencia de colegios cerca de tu zona?': 'Colegios', '¿Valoras en gran medida la existencia de zonas verdes cerca de tu zona?': 'Zonas verdes', '¿Valoras en gran medida la existencia de centros sanitarios cerca de tu zona?': 'Centros Sanitarios', '¿Valoras negativamente la contaminación en tu zona?': 'Contaminacion', '¿El exceso de ruido supone un problema para ti?': 'Ruido', '¿Cuánto valoras la limpieza del barrio?': 'Limpieza','Ante la posibilidad de adquirir un coche electrico, ¿valoras la existencia de puntos de recarga?': 'Electrico', 'De las comodidades anteriores ¿cuáles serían las 3 que más valoras?': 'Comodidades', '¿Cuánto estarías dispuesto a pagar por el alquiler de una casa que ofrezca todas las comodidades que buscas?': 'Alquiler'})\n",
     "#data_test = df.drop(['Marca temporal', 'Puntuación'], axis=1)\n",
     "data_test = df.loc[df.loc[:, 'Edad'] == 'Entre 20 y 24 años']\n",
     "divisor = data_test[data_test.columns[0]].count()\n",
-    "media = (df['Transporte Publico'].sum())/divisor\n",
-    "print (\"Column Transporte Público media:\",media)\n",
-    "Total = df['Colegios'].sum()\n",
-    "print (\"Column Colegios sum:\",Total)\n",
-    "Total = df['Zonas verdes'].sum()\n",
-    "print (\"Column Zonas verdes sum:\",Total)\n",
-    "Total = df['Centros Sanitarios'].sum()\n",
-    "print (\"Column Centros Sanitarios sum:\",Total) \n",
-    "Total = df['Contaminacion'].sum()\n",
-    "print (\"Column Contaminación sum:\",Total)\n",
-    "Total = df['Ruido'].sum()\n",
-    "print (\"Column Ruido sum:\",Total)\n",
-    "Total = df['Limpieza'].sum()\n",
-    "print (\"Column Limpieza sum:\",Total)\n",
-    "Total = df['Electrico'].sum()\n",
-    "print (\"Column Eléctrico sum:\",Total)\n"
+    "media_transp = (data_test['Transporte Publico'].sum())/divisor\n",
+    "media_colegios = (data_test['Colegios'].sum())/divisor\n",
+    "media_verdes = (data_test['Zonas verdes'].sum())/divisor\n",
+    "media_sanitarios = (data_test['Centros Sanitarios'].sum())/divisor\n",
+    "media_contaminacion = (data_test['Contaminacion'].sum())/divisor\n",
+    "media_ruido = (data_test['Ruido'].sum())/divisor\n",
+    "media_limpieza = (data_test['Limpieza'].sum())/divisor\n",
+    "media_electrico = (data_test['Electrico'].sum())/divisor\n",
+    "print(media_transp,media_colegios, media_verdes, media_sanitarios, media_contaminacion, media_ruido, media_limpieza, media_electrico)\n"
    ]
   }
  ],
