--- a/python/tmp_api/ponderaciones.ipynb
+++ b/python/tmp_api/ponderaciones.ipynb
@@ -64,7 +64,8 @@
     "media_ruido = (data_test['Ruido'].sum())/divisor\n",
     "media_limpieza = (data_test['Limpieza'].sum())/divisor\n",
     "media_electrico = (data_test['Electrico'].sum())/divisor\n",
-    "print(media_transp,media_colegios, media_verdes, media_sanitarios, media_contaminacion, media_ruido, media_limpieza, media_electrico)\n"
+    "print(media_transp,media_colegios, media_verdes, media_sanitarios, media_contaminacion, media_ruido, media_limpieza, media_electrico)\n",
+    "\n"
    ]
   }
  ],
