--- a/python/tmp_api/ponderaciones.ipynb
+++ b/python/tmp_api/ponderaciones.ipynb
@@ -1,8 +1,21 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4.921052631578948, 6.7894736842105265, 7.052631578947368, 7.105263157894737, 7.526315789473684, 8.0, 8.263157894736842, 8.605263157894736]\n",
+      "[7.2631578947368425, 7.368421052631579, 8.052631578947368, 8.263157894736842, 8.31578947368421, 8.736842105263158, 8.947368421052632, 9.736842105263158]\n",
+      "[7.280898876404494, 7.393258426966292, 8.303370786516854, 8.51685393258427, 8.55056179775281, 8.651685393258427, 8.831460674157304, 9.157303370786517]\n",
+      "[6.153846153846154, 7.3076923076923075, 7.6923076923076925, 7.846153846153846, 9.307692307692308, 9.307692307692308, 9.384615384615385, 9.461538461538462]\n"
+     ]
+    }
+   ],
    "source": [
     "from pydrive.auth import GoogleAuth\n",
     "from pydrive.drive import GoogleDrive\n",
@@ -37,36 +50,88 @@
     "    df = workbook.parse(sheet_name)\n",
     "    d[sheet_name] = df\n",
     "\n",
-    "df2 = df.rename(columns={'¿Qué edad tienes?': 'Edad', '¿Tienes hijos?': 'Hijos', '¿Trabajas actualmente?': 'Trabajo', '¿Valoras en gran medida la existencia de comercios cerca de tu zona?': 'Comercios', '¿Valoras en gran medida la existencia de estaciones de transporte público cerca de tu zona?': 'Transporte Publico', '¿Valoras en gran medida la existencia de lugares de ocio cerca de tu zona?': 'Ocio','¿Valoras en gran medida la existencia de colegios cerca de tu zona?': 'Colegios', '¿Valoras en gran medida la existencia de zonas verdes cerca de tu zona?': 'Zonas verdes', '¿Valoras en gran medida la existencia de centros sanitarios cerca de tu zona?': 'Centros Sanitarios', '¿Valoras negativamente la contaminación en tu zona?': 'Contaminacion', '¿El exceso de ruido supone un problema para ti?': 'Ruido', '¿Cuánto valoras la limpieza del barrio?': 'Limpieza','Ante la posibilidad de adquirir un coche electrico, ¿valoras la existencia de puntos de recarga?': 'Electrico', 'De las comodidades anteriores ¿cuáles serían las 3 que más valoras?': 'Comodidades', '¿Cuánto estarías dispuesto a pagar por el alquiler de una casa que ofrezca todas las comodidades que buscas?': 'Alquiler'})\n",
+    "df = df.rename(columns={'¿Qué edad tienes?': 'Edad', '¿Tienes hijos?': 'Hijos', '¿Trabajas actualmente?': 'Trabajo', '¿Valoras en gran medida la existencia de comercios cerca de tu zona?': 'Comercios', '¿Valoras en gran medida la existencia de estaciones de transporte público cerca de tu zona?': 'Transporte Publico', '¿Valoras en gran medida la existencia de lugares de ocio cerca de tu zona?': 'Ocio','¿Valoras en gran medida la existencia de colegios cerca de tu zona?': 'Colegios', '¿Valoras en gran medida la existencia de zonas verdes cerca de tu zona?': 'Zonas verdes', '¿Valoras en gran medida la existencia de centros sanitarios cerca de tu zona?': 'Centros Sanitarios', '¿Valoras negativamente la contaminación en tu zona?': 'Contaminacion', '¿El exceso de ruido supone un problema para ti?': 'Ruido', '¿Cuánto valoras la limpieza del barrio?': 'Limpieza','Ante la posibilidad de adquirir un coche electrico, ¿valoras la existencia de puntos de recarga?': 'Electrico', 'De las comodidades anteriores ¿cuáles serían las 3 que más valoras?': 'Comodidades', '¿Cuánto estarías dispuesto a pagar por el alquiler de una casa que ofrezca todas las comodidades que buscas?': 'Alquiler'})\n",
     "#data_test = df.drop(['Marca temporal', 'Puntuación'], axis=1)\n",
-    "data_test = df.loc[df.loc[:, 'Edad'] == 'Entre 20 y 24 años']\n",
-    "divisor = data_test[data_test.columns[0]].count()\n",
-    "media_transp = (data_test['Transporte Publico'].sum())/divisor\n",
-    "media_colegios = (data_test['Colegios'].sum())/divisor\n",
-    "media_verdes = (data_test['Zonas verdes'].sum())/divisor\n",
-    "media_sanitarios = (data_test['Centros Sanitarios'].sum())/divisor\n",
-    "media_contaminacion = (data_test['Contaminacion'].sum())/divisor\n",
-    "media_ruido = (data_test['Ruido'].sum())/divisor\n",
-    "media_limpieza = (data_test['Limpieza'].sum())/divisor\n",
-    "media_electrico = (data_test['Electrico'].sum())/divisor\n",
-    "print(media_transp,media_colegios, media_verdes, media_sanitarios, media_contaminacion, media_ruido, media_limpieza, media_electrico)\n"
+    "grupo_edad1 = df.loc[df.loc[:, 'Edad'] == 'Entre 20 y 24 años']\n",
+    "divisor = grupo_edad1[grupo_edad1.columns[0]].count()\n",
+    "media_transp = (grupo_edad1['Transporte Publico'].sum())/divisor\n",
+    "media_colegios = (grupo_edad1['Colegios'].sum())/divisor\n",
+    "media_verdes = (grupo_edad1['Zonas verdes'].sum())/divisor\n",
+    "media_sanitarios = (grupo_edad1['Centros Sanitarios'].sum())/divisor\n",
+    "media_contaminacion = (grupo_edad1['Contaminacion'].sum())/divisor\n",
+    "media_ruido = (grupo_edad1['Ruido'].sum())/divisor\n",
+    "media_limpieza = (grupo_edad1['Limpieza'].sum())/divisor\n",
+    "media_electrico = (grupo_edad1['Electrico'].sum())/divisor\n",
+    "lista1 = [media_transp,media_colegios, media_verdes, media_sanitarios, media_contaminacion, media_ruido, media_limpieza, media_electrico]\n",
+    "lista1.sort()\n",
+    "print(lista1)\n",
+    "\n",
+    "grupo_edad2 = df.loc[df.loc[:, 'Edad'] == 'Entre 25 y 39 años']\n",
+    "divisor = grupo_edad2[grupo_edad1.columns[0]].count()\n",
+    "media_transp = (grupo_edad2['Transporte Publico'].sum())/divisor\n",
+    "media_colegios = (grupo_edad2['Colegios'].sum())/divisor\n",
+    "media_verdes = (grupo_edad2['Zonas verdes'].sum())/divisor\n",
+    "media_sanitarios = (grupo_edad2['Centros Sanitarios'].sum())/divisor\n",
+    "media_contaminacion = (grupo_edad2['Contaminacion'].sum())/divisor\n",
+    "media_ruido = (grupo_edad2['Ruido'].sum())/divisor\n",
+    "media_limpieza = (grupo_edad2['Limpieza'].sum())/divisor\n",
+    "media_electrico = (grupo_edad2['Electrico'].sum())/divisor\n",
+    "lista2 = [media_transp,media_colegios, media_verdes, media_sanitarios, media_contaminacion, media_ruido, media_limpieza, media_electrico]\n",
+    "lista2.sort()\n",
+    "print(lista2)\n",
+    "\n",
+    "grupo_edad3 = df.loc[df.loc[:, 'Edad'] == 'Entre 40 y 60 años']\n",
+    "divisor = grupo_edad3[grupo_edad1.columns[0]].count()\n",
+    "media_transp = (grupo_edad3['Transporte Publico'].sum())/divisor\n",
+    "media_colegios = (grupo_edad3['Colegios'].sum())/divisor\n",
+    "media_verdes = (grupo_edad3['Zonas verdes'].sum())/divisor\n",
+    "media_sanitarios = (grupo_edad3['Centros Sanitarios'].sum())/divisor\n",
+    "media_contaminacion = (grupo_edad3['Contaminacion'].sum())/divisor\n",
+    "media_ruido = (grupo_edad3['Ruido'].sum())/divisor\n",
+    "media_limpieza = (grupo_edad3['Limpieza'].sum())/divisor\n",
+    "media_electrico = (grupo_edad3['Electrico'].sum())/divisor\n",
+    "lista3 = [media_transp,media_colegios, media_verdes, media_sanitarios, media_contaminacion, media_ruido, media_limpieza, media_electrico]\n",
+    "lista3.sort()\n",
+    "print(lista3)\n",
+    "\n",
+    "grupo_edad4 = df.loc[df.loc[:, 'Edad'] == 'Más de 60 años']\n",
+    "divisor = grupo_edad4[grupo_edad1.columns[0]].count()\n",
+    "media_transp = (grupo_edad4['Transporte Publico'].sum())/divisor\n",
+    "media_colegios = (grupo_edad4['Colegios'].sum())/divisor\n",
+    "media_verdes = (grupo_edad4['Zonas verdes'].sum())/divisor\n",
+    "media_sanitarios = (grupo_edad4['Centros Sanitarios'].sum())/divisor\n",
+    "media_contaminacion = (grupo_edad4['Contaminacion'].sum())/divisor\n",
+    "media_ruido = (grupo_edad4['Ruido'].sum())/divisor\n",
+    "media_limpieza = (grupo_edad4['Limpieza'].sum())/divisor\n",
+    "media_electrico = (grupo_edad4['Electrico'].sum())/divisor\n",
+    "lista4 = [media_transp,media_colegios, media_verdes, media_sanitarios, media_contaminacion, media_ruido, media_limpieza, media_electrico]\n",
+    "lista4.sort()\n",
+    "print(lista4)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.6"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "75c7325c0caecc2d82c8a4e534cbb5ce82d278e087a13a7861173b66f0f67f74"
    }
   }
  },
