--- a/python/main.ipynb
+++ b/python/main.ipynb
@@ -403,7 +403,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3.10.8 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -417,12 +417,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c63d8c7d738c2960218a10995aedf0a7f67a49a231e71037adf0440953cdb45b"
+    "hash": "f13b8da087c178c9c17ce20e87144d9f121abe35880a35f01740bb866e3dff53"
    }
   }
  },
